routers/demo-java-ingressroute.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-java-ingress
  namespace: app
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web, websecure
#    spec.ingressClassName: traefik
spec:
  rules:
    - host: demo.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: demo-java-app-service
                port:
                  number: 80
